fix families modules(visibality). change same styles.

--- a/joomla/components/com_manager/modules/ancestors/css/jmb.ancestors.css
+++ b/joomla/components/com_manager/modules/ancestors/css/jmb.ancestors.css
@@ -66,7 +66,6 @@ div#jit-label div.node{
 	background: #fcdbf0;
 }
 .jit-node-item .data div{
-	height: 20px;
     	margin-left: 3px;
     	text-align: left;
 }
