--- a/joomla/components/com_manager/modules/quick_facts/css/quick_facts.css
+++ b/joomla/components/com_manager/modules/quick_facts/css/quick_facts.css
@@ -1,6 +1,6 @@
 #JMBQuickFactsContainer {
 	font-family: Tahoma,sans-serif;
-	font-size: 12px;
+	font-size: 11px;
 	font-weight: normal;
 	margin: 10px 10px 20px;
 	position: relative;
