--- a/joomla/components/com_manager/modules/this_month/css/this_month.css
+++ b/joomla/components/com_manager/modules/this_month/css/this_month.css
@@ -56,7 +56,7 @@
 	line-height: 20px;
 	margin: 0;
 	text-align: center;
-	width: 16px;
+	width: 18px;
 }
 .jmb-this-month-content .person{
 
