--- a/joomla/components/com_manager/modules/tooltip/css/jmb.tooltip.css
+++ b/joomla/components/com_manager/modules/tooltip/css/jmb.tooltip.css
@@ -34,7 +34,7 @@
 }
 .jmb-tooltip-view-info-data span.text {
 	color: black;
-	font-size: 14px;
+	font-size: 11px;
 }
 .jmb-tooltip-view-images{
 	background: none repeat scroll 0 0 #F1E4B0;
